Add third party API documentation to swagger
