# routes/api.php
@@ -3,8 +3,16 @@
 use App\Http\Controllers\Api\ApiLogController;
 use App\Http\Controllers\Api\ArticleController;
 use App\Http\Controllers\Api\CronLogController;
+use App\Http\Controllers\Api\NewsFetchController;
+use App\Http\Controllers\Api\NewsPreviewController;
 use App\Http\Controllers\Api\SourceController;
 use Illuminate\Support\Facades\Route;
+
+Route::post('/news/fetch',        [NewsFetchController::class, 'fetchAll']);
+Route::post('/news/fetch/{slug}', [NewsFetchController::class, 'fetchOne']);
+
+Route::get('/news/preview/newsapi',  [NewsPreviewController::class, 'newsapi']);
+Route::get('/news/preview/newsdata', [NewsPreviewController::class, 'newsdata']);
 
 Route::get('/articles',       [ArticleController::class, 'index']);
 Route::get('/articles/{id}',  [ArticleController::class, 'show']);
